--- a/Website/Navya/skillMate/package.json
+++ b/Website/Navya/skillMate/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
