--- a/Website/Navya/skillMate/package.json
+++ b/Website/Navya/skillMate/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^7.1.1",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
+    "mermaid": "^11.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
