--- a/App_Code/package.json
+++ b/App_Code/package.json
@@ -9,20 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.10",
-    "@react-navigation/native-stack": "^7.3.14",
-    "expo": "~53.0.10",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "expo": "~53.0.0",
     "expo-status-bar": "~2.2.3",
     "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "react-native-deck-swiper": "^2.0.17",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1"
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@expo/metro-config": "~0.20.0",
+    "metro": "^0.82.0",
+    "metro-config": "^0.80.0"
   },
   "private": true
 }
