--- a/Website/Navya/skillMate/package.json
+++ b/Website/Navya/skillMate/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mui/icons-material": "^7.1.1",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
     "mermaid": "^11.6.0",
