--- a/Website/Navya/skillMate/package.json
+++ b/Website/Navya/skillMate/package.json
@@ -15,10 +15,12 @@
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
     "mermaid": "^11.6.0",
+    "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
