--- a/App_Code/package.json
+++ b/App_Code/package.json
@@ -12,12 +12,14 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.10.0",
     "expo": "~53.0.0",
     "expo-status-bar": "~2.2.3",
     "lodash": "^4.17.21",
     "react": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "^0.79.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "socket.io-client": "^4.7.4"
